tests/baselines/reference/exportAssignmentOfDeclaredExternalModule.errors.txt
exportAssignmentOfDeclaredExternalModule_1.ts(3,13): error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
exportAssignmentOfDeclaredExternalModule_1.ts(4,9): error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
exportAssignmentOfDeclaredExternalModule_1.ts(6,13): error TS2454: Variable 'z' is used before being assigned.
exportAssignmentOfDeclaredExternalModule_1.ts(7,9): error TS2454: Variable 'z' is used before being assigned.


==== exportAssignmentOfDeclaredExternalModule_1.ts (4 errors) ====
    ///<reference path='exportAssignmentOfDeclaredExternalModule_0.ts'/>
    import Sammy = require('./exportAssignmentOfDeclaredExternalModule_0');
    var x = new Sammy(); // error to use as constructor as there is not constructor symbol
                ~~~~~
!!! error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
    var y = Sammy(); // error to use interface name as call target
            ~~~~~
!!! error TS2693: 'Sammy' only refers to a type, but is being used as a value here.
    var z: Sammy; // no error - z is of type interface Sammy from module 'M'
    var a = new z(); // constructor - no error
                ~
!!! error TS2454: Variable 'z' is used before being assigned.
    var b = z(); // call signature - no error
            ~
!!! error TS2454: Variable 'z' is used before being assigned.
==== exportAssignmentOfDeclaredExternalModule_0.ts (0 errors) ====
    interface Sammy {
        new (): any; // a constructor signature
            (): number; // a 0 arg call signature
        }
    export = Sammy;
    